# uplc-to-aiken

./: .gitignore  AIKEN_UPLC_COMPILATION_PATTERNS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPLC_RESEARCH.md
.claude/: settings.json
src/: blockfrost.rs  main.rs
src/codegen/: mod.rs
src/decompiler/: aiken_patterns.rs  inline.rs  mod.rs  names.rs  passes.rs  pattern_match.rs  recursion.rs  v3_patterns.rs  validator.rs
src/ir/: lower.rs  mod.rs  node.rs
src/parser/: cbor.rs  mod.rs  text.rs
tests/: integration_test.rs
tests/fixtures/always_true/: script.cbor.hex  source.ak
tests/fixtures/check_42/: script.cbor.hex  source.ak
tests/fixtures/dex_swap/: script.cbor.hex  source.ak
tests/fixtures/hash_ops/: script.cbor.hex
tests/fixtures/list_ops/: script.cbor.hex
tests/fixtures/math_check/: script.cbor.hex  source.ak
tests/fixtures/multi_condition/: script.cbor.hex  source.ak
tests/fixtures/nested_pattern/: script.cbor.hex
tests/fixtures/option_check/: script.cbor.hex  source.ak
tests/fixtures/recursive_fns/: script.cbor.hex
tests/fixtures/token_minter/: script.cbor.hex
tests/fixtures/token_policy/: script.cbor.hex  source.ak
tests/fixtures/traced/: script.cbor.hex  source.ak
tests/fixtures/tx_info_check/: script.cbor.hex  source.ak
tests/fixtures/with_helper/: script.cbor.hex  source.ak
